// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error type renders correctly 1`] = `
<div
  className="css-gy0wi9"
>
  Error alert
</div>
`;

exports[`success type renders correctly 1`] = `
<div
  className="css-1ie2zfx"
>
  Success alert
</div>
`;
